# vanity_finder

./: Cargo.toml  README.md  build.rs
src/: common.rs  main.rs
